# deepseek-cli

./: .gitignore  AGENTS.md  CHANGELOG.md  LICENSE  MODULE.bazel  README.md  SECURITY.md  announcement_tip.toml  defs.bzl  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
deepseek-rs/agent-graph-store/: BUILD.bazel  Cargo.toml
deepseek-rs/agent-graph-store/src/: local.rs  store.rs
deepseek-rs/agent-identity/: BUILD.bazel  Cargo.toml
deepseek-rs/agent-identity/src/: lib.rs
deepseek-rs/analytics/: BUILD.bazel  Cargo.toml
deepseek-rs/analytics/src/: accepted_lines.rs  analytics_client_tests.rs  client.rs  client_tests.rs  events.rs  facts.rs  lib.rs  reducer.rs
deepseek-rs/app-server/: BUILD.bazel  Cargo.toml  README.md
deepseek-rs/app-server-client/: BUILD.bazel  Cargo.toml  README.md
deepseek-rs/app-server-client/src/: lib.rs  remote.rs
deepseek-rs/app-server-daemon/: BUILD.bazel  Cargo.toml  README.md
deepseek-rs/app-server-daemon/src/: client.rs  lib.rs  managed_install.rs  managed_install_tests.rs  remote_control_client.rs  update_loop.rs
deepseek-rs/app-server-protocol/: BUILD.bazel  Cargo.toml
deepseek-rs/app-server-protocol/src/: experimental_api.rs  export.rs  rpc.rs
deepseek-rs/app-server-protocol/tests/: schema_fixtures.rs
deepseek-rs/app-server-test-client/: BUILD.bazel  Cargo.toml  README.md
deepseek-rs/app-server-test-client/src/: lib.rs  main.rs  plugin_analytics_capture.rs  plugin_analytics_capture_tests.rs  plugin_analytics_mutation_smoke.rs  plugin_analytics_smoke.rs  request_user_input.rs  request_user_input_tests.rs
deepseek-rs/app-server-transport/: BUILD.bazel  Cargo.toml
deepseek-rs/app-server-transport/src/: outgoing_message.rs
deepseek-rs/app-server/src/: analytics_utils.rs  app_info.rs  app_server_tracing.rs  attestation.rs  auth_mode.rs  bespoke_event_handling.rs  command_exec.rs  config_layer.rs  config_manager.rs  config_manager_service.rs  config_manager_service_tests.rs  current_time.rs  dynamic_tools.rs  error_code.rs  extensions.rs  filters.rs  fs_watch.rs  fuzzy_file_search.rs  in_process.rs  lib.rs  main.rs  main_tests.rs  mcp_refresh.rs  message_processor.rs  message_processor_tracing_tests.rs  models.rs  models_refresh_worker.rs  models_refresh_worker_tests.rs  outgoing_message.rs  request_processors.rs  request_serialization.rs  server_request_error.rs  skills_watcher.rs  thread_state.rs  thread_status.rs  transport.rs  transport_tests.rs
deepseek-rs/arg0/: BUILD.bazel  Cargo.toml
deepseek-rs/arg0/src/: lib.rs
deepseek-rs/backend-client/: BUILD.bazel  Cargo.toml
deepseek-rs/backend-client/src/: client.rs  lib.rs  types.rs
deepseek-rs/cli/: BUILD.bazel  Cargo.toml
deepseek-rs/cli/src/: app_cmd.rs  debug_sandbox.rs  doctor.rs  exec_server_telemetry.rs  lib.rs  login.rs  main.rs  marketplace_cmd.rs  mcp_cmd.rs  plugin_cmd.rs  remote_control_cmd.rs  sandbox_setup.rs  state_db_recovery.rs
deepseek-rs/cli/tests/: app_server.rs  debug_clear_memories.rs  debug_models.rs  delete.rs  exec_server.rs  execpolicy.rs  features.rs  login.rs  marketplace_add.rs  marketplace_remove.rs  marketplace_upgrade.rs  mcp_add_remove.rs  mcp_list.rs  plugin_cli.rs  sandbox_network_proxy.rs  update.rs
deepseek-rs/cloud-config/: BUILD.bazel  Cargo.toml
deepseek-rs/cloud-config/src/: backend.rs  bundle_loader.rs  cache.rs  cache_tests.rs  lib.rs  metrics.rs  service.rs  service_tests.rs  validation.rs
deepseek-rs/cloud-tasks/: BUILD.bazel  Cargo.toml
deepseek-rs/cloud-tasks-client/: BUILD.bazel  Cargo.toml
deepseek-rs/cloud-tasks-client/src/: http.rs
deepseek-rs/cloud-tasks-mock-client/: BUILD.bazel  Cargo.toml
deepseek-rs/cloud-tasks-mock-client/src/: mock.rs
deepseek-rs/cloud-tasks/src/: app.rs  cli.rs  env_detect.rs  lib.rs  new_task.rs  ui.rs  util.rs
deepseek-rs/cloud-tasks/tests/: env_filter.rs
deepseek-rs/code-mode/: BUILD.bazel  Cargo.toml
deepseek-rs/code-mode-host/: BUILD.bazel  Cargo.toml
deepseek-rs/code-mode-host/src/: delegate.rs  host_tests.rs  lib.rs  main.rs  peer.rs  peer_tests.rs
deepseek-rs/code-mode-host/tests/: stdio.rs
deepseek-rs/code-mode-protocol/: BUILD.bazel  Cargo.toml
deepseek-rs/code-mode-protocol/src/: description.rs  runtime.rs  session.rs
deepseek-rs/code-mode/src/: lib.rs  remote_session.rs  remote_session_tests.rs  service.rs  service_contract_tests.rs  service_tests.rs
deepseek-rs/config/: BUILD.bazel  Cargo.toml
deepseek-rs/config/scripts/: generate-proto.sh
deepseek-rs/config/src/: cloud_config_bundle.rs  cloud_config_bundle_tests.rs  cloud_config_layers.rs  cloud_config_layers_tests.rs  config_layer_source.rs  config_requirements.rs  config_toml.rs  diagnostics.rs  hook_config.rs  hooks_tests.rs  lib.rs  marketplace_edit.rs  mcp_edit.rs  mcp_edit_tests.rs  mcp_types.rs  mcp_types_tests.rs  merge.rs  permissions_toml.rs  plugin_edit.rs  profile_toml.rs  requirements_exec_policy.rs  schema.rs  skills_config.rs  state.rs  strict_config.rs  strict_config_tests.rs  thread_config.rs  tui_keymap.rs  types.rs
deepseek-rs/connectors/: BUILD.bazel  Cargo.toml
deepseek-rs/connectors/src/: app_info.rs  app_tool_policy.rs  app_tool_policy_tests.rs  directory_cache.rs  lib.rs  plugin_config.rs  plugin_config_tests.rs  snapshot.rs  snapshot_tests.rs
deepseek-rs/context-fragments/: BUILD.bazel  Cargo.toml
deepseek-rs/context-fragments/src/: additional_context.rs  fragment.rs
deepseek-rs/core/: BUILD.bazel  Cargo.toml  README.md  config.schema.json  gpt-5.2-codex_prompt.md  gpt_5_1_prompt.md  gpt_5_2_prompt.md  gpt_5_codex_prompt.md  prompt_with_apply_patch_instructions.md
deepseek-rs/core-api/: BUILD.bazel  Cargo.toml
deepseek-rs/core-api/src/: lib.rs
deepseek-rs/core-plugins/: BUILD.bazel  Cargo.toml
deepseek-rs/core-plugins/src/: app_mcp_routing.rs  discoverable.rs  (+32 more)
deepseek-rs/core-skills/: BUILD.bazel  Cargo.toml
deepseek-rs/deepseek-chat/: BUILD.bazel  Cargo.toml  README.md
deepseek-rs/deepseek-home/: BUILD.bazel  Cargo.toml
deepseek-rs/deepseek-mcp/: BUILD.bazel  Cargo.toml
deepseek-rs/exec-server-protocol/: BUILD.bazel  Cargo.toml
(+2127 files in other folders)
