[package]
edition.workspace = true
license.workspace = true
name = "deepseek-analytics"
version.workspace = true

[lib]
doctest = false
name = "deepseek_analytics"
path = "src/lib.rs"

[lints]
workspace = true

[dependencies]
deepseek-app-server-protocol = { workspace = true }
deepseek-git-utils = { workspace = true }
deepseek-login = { workspace = true }
deepseek-model-provider = { workspace = true }
deepseek-plugin = { workspace = true }
deepseek-protocol = { workspace = true }
deepseek-state = { workspace = true }
os_info = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
sha1 = { workspace = true }
tokio = { workspace = true, features = [
    "macros",
    "rt-multi-thread",
] }
tracing = { workspace = true, features = ["log"] }

[dev-dependencies]
deepseek-utils-absolute-path = { workspace = true }
pretty_assertions = { workspace = true }
