[package]
name = "deepseek-app-server-client"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "deepseek_app_server_client"
path = "src/lib.rs"
doctest = false

[lints]
workspace = true

[dependencies]
deepseek-app-server = { workspace = true }
deepseek-app-server-protocol = { workspace = true }
deepseek-arg0 = { workspace = true }
deepseek-config = { workspace = true }
deepseek-core = { workspace = true }
deepseek-exec-server = { workspace = true }
deepseek-feedback = { workspace = true }
deepseek-protocol = { workspace = true }
deepseek-uds = { workspace = true }
deepseek-utils-absolute-path = { workspace = true }
deepseek-utils-rustls-provider = { workspace = true }
futures = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["sync", "time", "rt"] }
tokio-tungstenite = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }
url = { workspace = true }

[dev-dependencies]
pretty_assertions = { workspace = true }
serde_json = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
