[package]
name = "deepseek-app-server-daemon"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "deepseek_app_server_daemon"
path = "src/lib.rs"
doctest = false

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true }
deepseek-app-server-protocol = { workspace = true }
deepseek-app-server-transport = { workspace = true }
deepseek-utils-home-dir = { workspace = true }
deepseek-uds = { workspace = true }
futures = { workspace = true }
libc = { workspace = true }
reqwest = { workspace = true, features = ["rustls-tls"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
sha2 = { workspace = true }
tokio = { workspace = true, features = [
    "fs",
    "io-util",
    "macros",
    "process",
    "rt-multi-thread",
    "signal",
    "time",
] }
tokio-tungstenite = { workspace = true }

[dev-dependencies]
pretty_assertions = { workspace = true }
tempfile = { workspace = true }
