[package]
name = "deepseek-backend-client"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[lib]
path = "src/lib.rs"
doctest = false

[lints]
workspace = true

[dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
deepseek-backend-openapi-models = { path = "../deepseek-backend-openapi-models" }
deepseek-api = { workspace = true }
deepseek-client = { workspace = true }
deepseek-login = { workspace = true }
deepseek-model-provider = { workspace = true }
deepseek-protocol = { workspace = true }

[dev-dependencies]
pretty_assertions = "1"
