[package]
name = "deepseek-cloud-config"
version.workspace = true
edition.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
base64 = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
deepseek-backend-client = { workspace = true }
deepseek-config = { workspace = true }
deepseek-core = { workspace = true }
deepseek-login = { workspace = true }
deepseek-otel = { workspace = true }
deepseek-protocol = { workspace = true }
hmac = "0.12.1"
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
sha2 = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["fs", "rt", "sync", "time"] }
tracing = { workspace = true }

[dev-dependencies]
deepseek-agent-identity = { workspace = true }
pretty_assertions = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt", "test-util", "time"] }

[lib]
doctest = false
