[package]
edition.workspace = true
license.workspace = true
name = "deepseek-cloud-tasks-client"
version.workspace = true

[lib]
name = "deepseek_cloud_tasks_client"
path = "src/lib.rs"
test = false
doctest = false

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
deepseek-api = { workspace = true }
deepseek-backend-client = { workspace = true }
deepseek-git-utils = { workspace = true }
serde = { version = "1", features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
