
[package]
edition.workspace = true
license.workspace = true
name = "deepseek-cloud-tasks-mock-client"
version.workspace = true

[lib]
name = "deepseek_cloud_tasks_mock_client"
path = "src/lib.rs"
test = false
doctest = false

[lints]
workspace = true

[dependencies]
chrono = { workspace = true }
deepseek-cloud-tasks-client = { workspace = true }
diffy = { workspace = true }
