[package]
edition.workspace = true
license.workspace = true
name = "deepseek-cloud-tasks"
version.workspace = true

[lib]
name = "deepseek_cloud_tasks"
path = "src/lib.rs"
doctest = false

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
clap = { workspace = true, features = ["derive"] }
deepseek-client = { workspace = true }
deepseek-cloud-tasks-client = { workspace = true }
# TODO: deepseek-cloud-tasks-mock-client should be in dev-dependencies.
deepseek-cloud-tasks-mock-client = { workspace = true }
deepseek-core = { workspace = true }
deepseek-git-utils = { workspace = true }
deepseek-login = { path = "../login" }
deepseek-model-provider = { workspace = true }
deepseek-tui = { workspace = true }
deepseek-utils-cli = { workspace = true }
crossterm = { workspace = true, features = ["event-stream"] }
owo-colors = { workspace = true, features = ["supports-colors"] }
ratatui = { workspace = true }
reqwest = { workspace = true, features = ["json"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
supports-color = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
tokio-stream = { workspace = true }
tracing = { workspace = true, features = ["log"] }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
unicode-width = { workspace = true }

[dev-dependencies]
pretty_assertions = { workspace = true }
