[package]
name = "deepseek-code-mode-host"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "deepseek-code-mode-host"
path = "src/main.rs"

[lib]
doctest = false
name = "deepseek_code_mode_host"
path = "src/lib.rs"

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true }
deepseek-code-mode = { workspace = true }
deepseek-code-mode-protocol = { workspace = true }
tokio = { workspace = true, features = ["io-std", "io-util", "macros", "rt", "sync", "time"] }
tokio-util = { workspace = true, features = ["rt"] }

[dev-dependencies]
deepseek-protocol = { workspace = true }
deepseek-utils-cargo-bin = { workspace = true }
pretty_assertions = { workspace = true }
serde_json = { workspace = true }
