[package]
edition.workspace = true
license.workspace = true
name = "deepseek-code-mode-protocol"
version.workspace = true

[lib]
doctest = false
name = "deepseek_code_mode_protocol"
path = "src/lib.rs"

[lints]
workspace = true

[dependencies]
deepseek-protocol = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["io-util", "sync"] }
tokio-util = { workspace = true, features = ["rt"] }

[dev-dependencies]
pretty_assertions = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
