[package]
edition.workspace = true
license.workspace = true
name = "deepseek-code-mode"
version.workspace = true

[lib]
doctest = false
name = "deepseek_code_mode"
path = "src/lib.rs"

[features]
sandbox = ["v8/v8_enable_sandbox"]

[lints]
workspace = true

[dependencies]
deepseek-code-mode-protocol = { workspace = true }
deepseek-protocol = { workspace = true }
deno_core_icudata = { workspace = true }
futures = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["io-util", "macros", "process", "rt", "sync", "time"] }
tokio-util = { workspace = true, features = ["rt"] }
tracing = { workspace = true }
v8 = { workspace = true }

[dev-dependencies]
pretty_assertions = { workspace = true }
