[package]
name = "deepseek-exec-server-protocol"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "deepseek_exec_server_protocol"
path = "src/lib.rs"
doctest = false

[lints]
workspace = true

[dependencies]
base64 = { workspace = true }
deepseek-file-system = { workspace = true }
deepseek-network-proxy = { workspace = true }
deepseek-protocol = { workspace = true }
deepseek-shell-command = { workspace = true }
deepseek-utils-path-uri = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }

[dev-dependencies]
pretty_assertions = { workspace = true }
